# pyKilosort

./: .flake8  .gitignore  .pre-commit-config.yaml  .yamllint  README.md  pyKilosort.code-workspace  pyproject.toml
.github/workflows/: test.yml
docs/: conf.py  index.rst
src/kilosort/: __about__.py  __init__.py  app.py  options.py  preprocess.py
tests/: __init__.py  test_version.py
